--- a/src/main/resources/static/report/DeclaracaoAvaliador.jrxml
+++ b/src/main/resources/static/report/DeclaracaoAvaliador.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Proposta" pageWidth="595" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="3abbd2c5-53cd-45fa-bfd8-9cff8eb4bc4c">
 	<property name="ireport.zoom" value="1.607691607500001"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="529"/>
+	<property name="ireport.y" value="0"/>
 	<style name="Heading 1" fontSize="16" isBold="true"/>
 	<style name="Heading" fontSize="14"/>
 	<style name="Heading 2" fontSize="14" isBold="true" isItalic="true"/>
@@ -28,55 +28,77 @@
 	</style>
 	<subDataset name="Table Dataset 1" uuid="5a8661c4-f89c-461f-8df4-1a1045dac2ff">
 		<parameter name="Professor" class="java.lang.String"/>
+		<parameter name="IdProfessor" class="java.lang.String"/>
 		<queryString>
 			<![CDATA[SELECT
-     professor.`nome` AS professor_nome,
+     usuario.`id_usuario` AS usuario_id_usuario,
+     usuario.`ativo` AS usuario_ativo,
+     usuario.`email` AS usuario_email,
+     usuario.`nome` AS usuario_nome,
+     usuario.`nome_usuario` AS usuario_nome_usuario,
+     usuario.`senha` AS usuario_senha,
+     usuario.`telefone` AS usuario_telefone,
+     ficha_identificacao.`id` AS ficha_identificacao_id,
+     ficha_identificacao.`ano` AS ficha_identificacao_ano,
+     ficha_identificacao.`area_concentracao` AS ficha_identificacao_area_concentracao,
      ficha_identificacao.`titulo_trabalho` AS ficha_identificacao_titulo_trabalho,
+     ficha_identificacao.`aluno_id_usuario` AS ficha_identificacao_aluno_id_usuario,
      ficha_identificacao.`avaliador1_id_professor` AS ficha_identificacao_avaliador1_id_professor,
      ficha_identificacao.`avaliador2_id_professor` AS ficha_identificacao_avaliador2_id_professor,
+     ficha_identificacao.`orientador_id_professor` AS ficha_identificacao_orientador_id_professor,
+     aluno.`curso` AS aluno_curso,
+     aluno.`ra` AS aluno_ra,
+     aluno.`id_usuario` AS aluno_id_usuario,
+     agendamento.`id` AS agendamento_id,
+     agendamento.`ano` AS agendamento_ano,
+     agendamento.`ativo` AS agendamento_ativo,
      agendamento.`data_defesa` AS agendamento_data_defesa,
-     usuario.`nome` AS usuario_nome
+     agendamento.`horario` AS agendamento_horario,
+     agendamento.`local` AS agendamento_local,
+     agendamento.`ficha_identificacao_id` AS agendamento_ficha_identificacao_id,
+     agendamento.`apresentado` AS agendamento_apresentado
 FROM
-     `professor` professor INNER JOIN `ficha_identificacao` ficha_identificacao ON professor.`id_professor` = ficha_identificacao.`avaliador2_id_professor`
-     AND professor.`id_professor` = ficha_identificacao.`avaliador1_id_professor`
-     AND professor.`id_professor` = ficha_identificacao.`orientador_id_professor`
+     `usuario` usuario INNER JOIN `aluno` aluno ON usuario.`id_usuario` = aluno.`id_usuario`
+     INNER JOIN `ficha_identificacao` ficha_identificacao ON aluno.`id_usuario` = ficha_identificacao.`aluno_id_usuario`
      INNER JOIN `agendamento` agendamento ON ficha_identificacao.`id` = agendamento.`ficha_identificacao_id`
-     INNER JOIN `aluno` aluno ON ficha_identificacao.`aluno_id_usuario` = aluno.`id_usuario`
-     INNER JOIN `usuario` usuario ON aluno.`id_usuario` = usuario.`id_usuario`
 WHERE
-     professor.`nome` = $P{Professor}]]>
+     $P{IdProfessor} = ficha_identificacao.`avaliador1_id_professor`
+  OR $P{IdProfessor} = ficha_identificacao.`avaliador2_id_professor`]]>
 		</queryString>
-		<field name="professor_nome" class="java.lang.String"/>
+		<field name="usuario_id_usuario" class="java.lang.Long"/>
+		<field name="usuario_ativo" class="java.lang.Integer"/>
+		<field name="usuario_email" class="java.lang.String"/>
+		<field name="usuario_nome" class="java.lang.String"/>
+		<field name="usuario_nome_usuario" class="java.lang.String"/>
+		<field name="usuario_senha" class="java.lang.String"/>
+		<field name="usuario_telefone" class="java.lang.String"/>
+		<field name="ficha_identificacao_id" class="java.lang.Long"/>
+		<field name="ficha_identificacao_ano" class="java.lang.Integer"/>
+		<field name="ficha_identificacao_area_concentracao" class="java.lang.String"/>
 		<field name="ficha_identificacao_titulo_trabalho" class="java.lang.String"/>
+		<field name="ficha_identificacao_aluno_id_usuario" class="java.lang.Long"/>
 		<field name="ficha_identificacao_avaliador1_id_professor" class="java.lang.Long"/>
 		<field name="ficha_identificacao_avaliador2_id_professor" class="java.lang.Long"/>
+		<field name="ficha_identificacao_orientador_id_professor" class="java.lang.Long"/>
+		<field name="aluno_curso" class="java.lang.String"/>
+		<field name="aluno_ra" class="java.lang.Integer"/>
+		<field name="aluno_id_usuario" class="java.lang.Long"/>
+		<field name="agendamento_id" class="java.lang.Long"/>
+		<field name="agendamento_ano" class="java.lang.Integer"/>
+		<field name="agendamento_ativo" class="java.lang.Integer"/>
 		<field name="agendamento_data_defesa" class="java.sql.Date"/>
-		<field name="usuario_nome" class="java.lang.String"/>
+		<field name="agendamento_horario" class="java.lang.String"/>
+		<field name="agendamento_local" class="java.lang.String"/>
+		<field name="agendamento_ficha_identificacao_id" class="java.lang.Long"/>
+		<field name="agendamento_apresentado" class="java.lang.Integer"/>
 	</subDataset>
 	<parameter name="NomeCurso" class="java.lang.String"/>
 	<parameter name="Professor" class="java.lang.String"/>
 	<parameter name="CoordenadorCurso" class="java.lang.String"/>
 	<parameter name="Data" class="java.lang.String"/>
+	<parameter name="IdProfessor" class="java.lang.String"/>
 	<queryString>
-		<![CDATA[SELECT
-     professor.`nome` AS professor_nome,
-     ficha_identificacao.`titulo_trabalho` AS ficha_identificacao_titulo_trabalho,
-     ficha_identificacao.`avaliador1_id_professor` AS ficha_identificacao_avaliador1_id_professor,
-     ficha_identificacao.`avaliador2_id_professor` AS ficha_identificacao_avaliador2_id_professor,
-     agendamento.`data_defesa` AS agendamento_data_defesa,
-     usuario.`nome` AS usuario_nome,
-     ficha_identificacao.`area_concentracao` AS ficha_identificacao_area_concentracao
-FROM
-     `professor` professor INNER JOIN `ficha_identificacao` ficha_identificacao ON professor.`id_professor` = ficha_identificacao.`avaliador2_id_professor`
-     AND professor.`id_professor` = ficha_identificacao.`orientador_id_professor`
-     AND professor.`id_professor` = ficha_identificacao.`avaliador1_id_professor`
-     INNER JOIN `agendamento` agendamento ON ficha_identificacao.`id` = agendamento.`ficha_identificacao_id`
-     INNER JOIN `aluno` aluno ON ficha_identificacao.`aluno_id_usuario` = aluno.`id_usuario`
-     INNER JOIN `usuario` usuario ON aluno.`id_usuario` = usuario.`id_usuario`
-WHERE
-     professor.`nome` = $P{Professor}
- AND agendamento.`data_defesa` < $P{Data}
- AND ficha_identificacao.`area_concentracao` = $P{NomeCurso}]]>
+		<![CDATA[]]>
 	</queryString>
 	<field name="professor_nome" class="java.lang.String"/>
 	<field name="ficha_identificacao_titulo_trabalho" class="java.lang.String"/>
@@ -95,7 +117,7 @@ WHERE
 				<textElement textAlignment="Center">
 					<font size="16" isBold="true"/>
 				</textElement>
-				<text><![CDATA["UNIVERSIDADE ESTADUAL DE MARINGÁ"]]></text>
+				<text><![CDATA[UNIVERSIDADE ESTADUAL DE MARINGÁ]]></text>
 			</staticText>
 			<image>
 				<reportElement x="481" y="15" width="74" height="43" uuid="9894aa69-acc8-416f-b135-a46e199938a2"/>
@@ -151,11 +173,14 @@ WHERE
 			<componentElement>
 				<reportElement key="table" style="table" mode="Transparent" x="13" y="112" width="531" height="82" uuid="51e4a850-53f3-47b4-8d6f-b84cd6f04ac0"/>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="Table Dataset 1" uuid="8213c2ef-511c-4883-82dc-78ef4a3a3624">
+					<datasetRun subDataset="Table Dataset 1" uuid="84960970-e5e6-4636-9bdf-9b093db0cf2f">
 						<datasetParameter name="Professor">
 							<datasetParameterExpression><![CDATA[$P{Professor}]]></datasetParameterExpression>
 						</datasetParameter>
-						<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.JREmptyDataSource(1)]]></dataSourceExpression>
+						<datasetParameter name="IdProfessor">
+							<datasetParameterExpression><![CDATA[$P{IdProfessor}]]></datasetParameterExpression>
+						</datasetParameter>
+						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
 					<jr:column width="107" uuid="5840836f-a29f-4926-9a7c-3f1c4ea02e75">
 						<jr:tableHeader style="table_TH" height="30" rowSpan="1">
