--- a/src/main/resources/templates/declaracoes/cadastro.html
+++ b/src/main/resources/templates/declaracoes/cadastro.html
@@ -51,7 +51,7 @@
 						<div class="form-group row justify-content-center">
 							<div class="col-xl-10">
 								<div class="form-group">
-									<label for="carga" class="col-form-label text-right">carga</label>
+									<label for="carga" class="col-form-label text-right">Carga Horária</label>
 									<div class="controls">
 										<input type="number" step="0.01" min="0" name="carga" id="carga"
 											class="form-control" autofocus="autofocus" required
