--- a/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
+++ b/src/main/resources/templates/agendamentodefesa/defesaUpdate.html
@@ -116,15 +116,15 @@ $(function() {
 										th:errors="*{fichaIdentificacao.aluno.nome}"></div>
 								</div>
 							</div>
-							<div class="form-group row justify-content-center">
+							<div class="form-group row">
+
 								<div class="field-wrapper controls col-sm-12 col-sm-12">
-									<input type="text" name="titulo" id="titulo"
-										class="form-control" th:field="*{fichaIdentificacao.tituloTrabalho}"
+									<label for="titulo" class="col-form-label text-right">Título
+										do trabalho*</label> <input type="text" name="titulo" id="titulo"
+										class="form-control"
+										th:field="*{fichaIdentificacao.tituloTrabalho}"
 										autofocus="autofocus" aria-label="Título do Trabalho"
-										aria-describedby="basic-addon1" >
-									<div class="field-placeholder">
-										<span>Título do trabalho*</span>
-									</div>
+										aria-describedby="basic-addon1">
 									<div style="color: red;"
 										th:if="${#fields.hasErrors('fichaIdentificacao.tituloTrabalho')}"
 										th:errors="*{fichaIdentificacao.tituloTrabalho}"></div>
@@ -132,40 +132,47 @@ $(function() {
 							</div>
 							<div class="input-group">
 								<div class="form-row" style="width: 100%;">
-									<div class="field-wrapper col">
-										<input type="text" name="dataDefesa" id="dataDefesa"
-											class="form-control" th:field="*{dataDefesa}"
-											autofocus="autofocus" aria-label="Data de defesa"
-											aria-describedby="basic-addon1" />
-										<div class="field-placeholder">
-											<span>Data de defesa*</span>
+									<div class="col">
+										<div class="form-group">
+											<label for="dataDefesa" class="col-form-label text-right">Data
+												de defesa*</label>
+											<div class="controls">
+												<input type="text" name="dataDefesa" id="dataDefesa"
+													class="form-control" th:field="*{dataDefesa}"
+													autofocus="autofocus" aria-label="Data de defesa"
+													aria-describedby="basic-addon1" />
+												<div style="color: red;"
+													th:if="${#fields.hasErrors('dataDefesa')}"
+													th:errors="*{dataDefesa}"></div>
+											</div>
 										</div>
-										<div style="color: red;"
-											th:if="${#fields.hasErrors('dataDefesa')}"
-											th:errors="*{dataDefesa}"></div>
 									</div>
-									<div class="field-wrapper col">
-										<input type="text" name="horario" id="horario"
-											class="form-control" th:field="*{horario}"
-											autofocus="autofocus" aria-label="Horario"
-											aria-describedby="basic-addon1" />
-										<div class="field-placeholder">
-											<span>Horário*</span>
+									<div class="col">
+										<div class="form-group">
+											<label for="horario" class="col-form-label text-right">Horário*</label>
+											<div class="controls">
+												<input type="text" name="horario" id="horario"
+													class="form-control" th:field="*{horario}"
+													autofocus="autofocus" aria-label="Horario"
+													aria-describedby="basic-addon1" />
+												<div style="color: red;"
+													th:if="${#fields.hasErrors('horario')}"
+													th:errors="*{horario}"></div>
+											</div>
 										</div>
-										<div style="color: red;"
-											th:if="${#fields.hasErrors('horario')}"
-											th:errors="*{horario}"></div>
 									</div>
-									<div class="field-wrapper col">
-										<input type="text" name="local" id="local"
-											class="form-control" th:field="*{local}"
-											autofocus="autofocus" aria-label="Local"
-											aria-describedby="basic-addon1" />
-										<div class="field-placeholder">
-											<span>Local*</span>
+									<div class="col">
+										<div class="form-group">
+											<label for="local" class="col-form-label text-right">Local*</label>
+											<div class="controls">
+												<input type="text" name="local" id="local"
+													class="form-control" th:field="*{local}"
+													autofocus="autofocus" aria-label="Local"
+													aria-describedby="basic-addon1" />
+												<div style="color: red;"
+													th:if="${#fields.hasErrors('local')}" th:errors="*{local}"></div>
+											</div>
 										</div>
-										<div style="color: red;" th:if="${#fields.hasErrors('local')}"
-											th:errors="*{local}"></div>
 									</div>
 								</div>
 							</div>
@@ -260,63 +267,81 @@ $(function() {
 							</div>
 						</div>
 						<!-- Modal data defesa -->
-						<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-						  <div class="modal-dialog modal-lg">
-						    <div class="modal-content">
-						            <div class="modal-header">
-						                <h5 class="modal-title" id="defesaModalLabel">Defesa</h5>
-						            </div>
-						            <div class="modal-body">
-						                <table id="tabela_defesas" class="table table-hover table-striped table-bordered table-click"
-						                    style="display: flex !important;align-items: center !important;width: 100% !important;flex-direction:column;">
-						
-						                    <thead
-						                        style="width: 100% !important; display:flex; justify-content: space-between; background-color: #fff !important; border:none; border-radius: 5px !important;padding: 1em !important;">
-						                        <tr style="width: 100% !important; display:flex; justify-content: space-between;">
-						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Data
-						                            </th>
-						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class=""> Orientando
-						                            </th>
-						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Horário
-						                            </th>
-						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Local
-						                            </th>
-						                            <th style="padding-left: 0.25em !important;border:none; font-size:1.05em" class="">Ações
-						                            </th>
-						                        </tr>
-						                    </thead>
-						
-						                    <tbody style="width:100%">
-						                        <tr id="bodyModalTabela" th:if="${not #lists.isEmpty(agendamentoLista)}" th:each="agendamento : ${agendamentoLista}">
-						                            <td width="15%" th:text="${#temporals.format(agendamento.dataDefesa, 'dd/MM/yyyy')}"></td>
-						                            <td width="30%"th:text="${agendamento.fichaIdentificacao.aluno.nome}"></td>
-						                            <td width="20%" style="text-align:left !important; padding: 0.75rem 2.75em !important;" th:text="${agendamento.horario}"></td>
-						                            <td width="20%" style="text-align:center !important;"th:text="${agendamento.local}"></td>
-						                            <td width="15%">
-						                                <div class="btn-group pull-right">
-						                                    <a class="btn btn-sm btn-warning"
-						                                        th:href="@{/gtcc/agendamentodefesa/detalhes/{id}(id=${agendamento.id})}">Detalhes</a>
-						                                    <a class="btn btn-sm btn-primary"
-						                                        th:href="@{/gtcc/agendamentodefesa/editar/{id}(id=${agendamento.id})}">Editar</a>
-						                                </div>
-						                            </td>
-						                        </tr>
-						                        <tr th:if="${#lists.isEmpty(agendamentoLista)}">
-						                            <td colspan="6">
-						                                <div class="alert alert-info" style="background-color: #f1f3f5;" role="alert">
-						                                    Nenhuma defesa cadastrada encontrada.
-						                                </div> 
-						                            </td>
-						                        </tr>
-						                    </tbody>
-						                    <tfoot> </tfoot>
-						                </table>
-						            </div>
-						            <div class="modal-footer">
-						                <button type="button" class="btn btn-secondary" data-dismiss="modal">Sair</button>
-						            </div>
-						        </div>
-						    </div>
+						<div class="modal fade bd-example-modal-lg" tabindex="-1"
+							role="dialog" aria-labelledby="myLargeModalLabel"
+							aria-hidden="true">
+							<div class="modal-dialog modal-lg">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="defesaModalLabel">Defesa</h5>
+									</div>
+									<div class="modal-body">
+										<table id="tabela_defesas"
+											class="table table-hover table-striped table-bordered table-click"
+											style="display: flex !important; align-items: center !important; width: 100% !important; flex-direction: column;">
+
+											<thead
+												style="width: 100% !important; display: flex; justify-content: space-between; background-color: #fff !important; border: none; border-radius: 5px !important; padding: 1em !important;">
+												<tr
+													style="width: 100% !important; display: flex; justify-content: space-between;">
+													<th
+														style="padding-left: 0.25em !important; border: none; font-size: 1.05em"
+														class="">Data</th>
+													<th
+														style="padding-left: 0.25em !important; border: none; font-size: 1.05em"
+														class="">Orientando</th>
+													<th
+														style="padding-left: 0.25em !important; border: none; font-size: 1.05em"
+														class="">Horário</th>
+													<th
+														style="padding-left: 0.25em !important; border: none; font-size: 1.05em"
+														class="">Local</th>
+													<th
+														style="padding-left: 0.25em !important; border: none; font-size: 1.05em"
+														class="">Ações</th>
+												</tr>
+											</thead>
+
+											<tbody style="width: 100%">
+												<tr id="bodyModalTabela"
+													th:if="${not #lists.isEmpty(agendamentoLista)}"
+													th:each="agendamento : ${agendamentoLista}">
+													<td width="15%"
+														th:text="${#temporals.format(agendamento.dataDefesa, 'dd/MM/yyyy')}"></td>
+													<td width="30%"
+														th:text="${agendamento.fichaIdentificacao.aluno.nome}"></td>
+													<td width="20%"
+														style="text-align: left !important; padding: 0.75rem 2.75em !important;"
+														th:text="${agendamento.horario}"></td>
+													<td width="20%" style="text-align: center !important;"
+														th:text="${agendamento.local}"></td>
+													<td width="15%">
+														<div class="btn-group pull-right">
+															<a class="btn btn-sm btn-warning"
+																th:href="@{/gtcc/agendamentodefesa/detalhes/{id}(id=${agendamento.id})}">Detalhes</a>
+															<a class="btn btn-sm btn-primary"
+																th:href="@{/gtcc/agendamentodefesa/editar/{id}(id=${agendamento.id})}">Editar</a>
+														</div>
+													</td>
+												</tr>
+												<tr th:if="${#lists.isEmpty(agendamentoLista)}">
+													<td colspan="6">
+														<div class="alert alert-info"
+															style="background-color: #f1f3f5;" role="alert">
+															Nenhuma defesa cadastrada encontrada.</div>
+													</td>
+												</tr>
+											</tbody>
+											<tfoot>
+											</tfoot>
+										</table>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary"
+											data-dismiss="modal">Sair</button>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
