fix: input's ficha de identificacao e mapa de notas

--- a/src/main/resources/templates/fichaIdentificacao/fichaSearch.html
+++ b/src/main/resources/templates/fichaIdentificacao/fichaSearch.html
@@ -24,10 +24,8 @@
 							<div class="field-wrapper col-xl-8">
 								<input type="text" name="tituloTrabalho" id="tituloTrabalho"
 									class="form-control" th:field="*{tituloTrabalho}"
+									placeholder="Título do Trabalho"
 									aria-label="Título do Trabalho" aria-describedby="basic-addon1">
-								<div class="field-placeholder">
-									<span>Título do Trabalho</span>
-								</div>
 							</div>
 							<div class="input-group col-xl-2">
 								<button class="btn btn-outline-secondary" type="submit"
