--- a/src/main/resources/templates/mapanotas/index.html
+++ b/src/main/resources/templates/mapanotas/index.html
@@ -21,12 +21,10 @@
 						class="form-default form-horizontal">
 						<div class="form-group row justify-content-center">
 							<div class="field-wrapper col-xl-8">
-								<input type="text" name="ano" id="ano"
+								<input type="number" name="ano" id="ano"
 									class="form-control" th:field="*{ano}"
+									placeholder="Ano"
 									aria-label="Ano" aria-describedby="basic-addon1">
-								<div class="field-placeholder">
-									<span>Ano</span>
-								</div>
 							</div>
 							<div class="input-group col-xl-2">
 								<button class="btn btn-outline-secondary" type="submit"
