--- a/src/main/resources/templates/declaracoes/cadastro.html
+++ b/src/main/resources/templates/declaracoes/cadastro.html
@@ -135,7 +135,7 @@
 							</div>
 							<div class="col-sm-2 text-right">
 								<button id="btn_salvar" type="submit"
-									class="btn btn-lg btn-success submit">Gerar</button>
+									class="btn btn-lg btn-success submit">Cadastrar</button>
 							</div>
 
 
